--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@fullcalendar/core": "^5.11.2",
+        "@fullcalendar/daygrid": "^5.11.2",
+        "@fullcalendar/interaction": "^5.11.2",
+        "@fullcalendar/list": "^5.11.3",
+        "@fullcalendar/timegrid": "^5.11.3",
+        "@fullcalendar/vue3": "^5.11.2",
+        "@vuelidate/core": "^2.0.0-alpha.44",
+        "@vuelidate/validators": "^2.0.0-alpha.31",
+        "chart.js": "^3.9.1",
+        "mitt": "^3.0.0",
         "pinia": "^2.0.14",
+        "primeicons": "^5.0.0",
+        "primevue": "^3.15.0",
         "sass": "^1.52.2",
-        "vue": "^3.2.25"
+        "vue": "^3.2.25",
+        "vue-router": "^4.0.13"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
